# cmake_project

./: .gitignore  CMakeLists.txt  cmk
src/: CMakeLists.txt
src/main/: CMakeLists.txt  main.c
src/mode1/: CMakeLists.txt  mode1.c
src/mode2/: CMakeLists.txt  mode2.c
